[package]
name = "aws-fpga-rs"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1"
bindgen = "0.50"

[dependencies]
bitflags = "1.1"
